# rust_workflow

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug.yml  epic.yml  task.yml
.github/workflows/: ci.yml  rust-ci.yml
examples/: ci.yml
src/: lib.rs
